# 2024-Mechanism-and-Control-of-Medical-Robotics

./: README.md
CR_ROS-1.0/: README-CN.md
CR_ROS-1.0/cr5_moveit/config/: cr5_robot.srdf
CR_ROS-1.0/cr5_moveit/launch/: rviz_cr5_state.launch  trajectory_execution.launch.xml
CR_ROS-1.0/dobot_bringup/: CMakeLists.txt
CR_ROS-1.0/dobot_bringup/data/20221113/: joint.txt
CR_ROS-1.0/dobot_bringup/data/20221120/: joint.txt  robot.txt
CR_ROS-1.0/dobot_bringup/include/dobot_bringup/: cr5_robot.h
CR_ROS-1.0/dobot_bringup/launch/: bringup.launch
CR_ROS-1.0/dobot_bringup/msg/: ToolVectorActual.msg
CR_ROS-1.0/dobot_bringup/src/: cr5_robot.cpp  main.cpp
CR_ROS-1.0/dobot_description/launch/: display.launch
CR_ROS-1.0/dobot_description/meshes/cr5/: total_instrument_5.STL
CR_ROS-1.0/dobot_description/urdf/: cr5_robot_instrument.urdf
CR_ROS-1.0/dobot_gazebo/launch/: cr5_robot_instrument_description.xml  gazebo_rcm.launch
CR_ROS-1.0/dobot_gazebo/urdf/: cr5_robot.xacro  cr5_robot_camera.xacro  cr5_robot_instrument.xacro
rcm_sim_world/: rcm_world.world
rcm_sim_world/enterocoelia_model/: enterocoelia_model.stl  model.config  model.sdf
rcm_sim_world/rcm_target_point/: model.config  model.sdf
user_control/: CMakeLists.txt  package.xml
user_control/launch/: hand_tracking.launch
user_control/src/: handtracking.py  rcm_hand.cpp  rcm_joystick.cpp  rcm_keyboard.cpp  real_rcm_joystick.cpp  real_rcm_keyboard.cpp
